# scanmem

./: .gitignore  CMakeConfig.h.in  CMakeLists.txt  README.md  common.h  config.h.in  configure.ac  handlers.c  maps.c  ptrace.c  scanmem.h  show_message.c  targetmem.c  targetmem.h
gui/: CMakeLists.txt  GameConqueror.py  GameConqueror.ui  Makefile.am  README.md  gameconqueror.in  misc.py  org.freedesktop.gameconqueror.policy.in.in  org.scanmem.gameconqueror.desktop.in  org.scanmem.gameconqueror.metainfo.xml.in  scanmem.py  speedhack.py
gui/icons/: Makefile.am
po/: CMakeLists.txt  POTFILES.in
src/: main.c  messages.h  parseopt.c  procmaps.c  procmaps.h  scanmem2.c  scanmem2.h  sys.h
